@@ -1,17 +1,41 @@
 version: 1.0.{build}
 
+image:
+  - Visual Studio 2015
+  - Ubuntu
+  - ubuntu1804
+
+environment:
+  PERL5LIB: /home/appveyor/perl5/lib/perl5
+  AUTOMATED_TESTING: 1
+
+platform: x64
+
+branches:
+  only:
+    - master
+
+skip_tags: true
+
 install:
-  - cinst StrawberryPerl --allow-empty-checksums
-  - path C:\strawberry\perl\bin;C:\strawberry\perl\site\bin;C:\strawberry\c\bin;%PATH%
-  - mkdir %APPVEYOR_BUILD_FOLDER%\tmp
-  - set TMPDIR=%APPVEYOR_BUILD_FOLDER%\tmp
+  - cmd: if not exist "C:\strawberry" cinst StrawberryPerl --allow-empty-checksums
+  - cmd: path C:\strawberry\perl\bin;C:\strawberry\perl\site\bin;C:\strawberry\c\bin;%PATH%
+  # - cmd: cd C:\projects\%APPVEYOR_PROJECT_NAME%
+  - sh: sudo apt-get update -q
+  - sh: sudo apt-get install build-essential git libssl-dev
+  - sh: sudo apt-get install -y perl
+  - sh: export PATH=/home/appveyor/perl5/bin:$PATH
   - perl -V
+  - cmd: mkdir %APPVEYOR_BUILD_FOLDER%\tmp
+  - cmd: set TMPDIR=%APPVEYOR_BUILD_FOLDER%\tmp
   - cpan App::cpanminus
-  - cpanm -q --showdeps --with-develop --with-suggests . | findstr /v "^perl\>" | cpanm -n
-  - 'echo End install at: & time /t'
+  - cmd: cpanm -q --showdeps --with-develop --with-suggests . | findstr /v "^perl\>" | cpanm -n
+  - cpanm -v --installdeps .
+  - cmd: 'echo End install at: & time /t'
 
 build_script:
   - perl Makefile.PL
 
 test_script:
-  - dmake test
+  - cmd: gmake test
+  - sh: make test
